--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "start": "rollup -c -w",
     "prepare": "yarn run build",
     "predeploy": "cd example && yarn install && yarn run build",
-    "deploy": "gh-pages -d example/build"
+    "deploy": "gh-pages -d example/build",
+    "version": "auto-changelog -p && git add CHANGELOG.md"
   },
   "peerDependencies": {
     "prop-types": "^15.7.2",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@svgr/rollup": "^2.4.1",
+    "auto-changelog": "^1.16.1",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
     "babel-plugin-external-helpers": "^6.22.0",
